--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "5.11.15"
+    "mongoose": "5.11.15",
+    "nodemailer": "^6.9.13",
+    "nodemon": "^3.1.3",
+    "pm2": "^5.4.0"
   }
 }
