--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "5.11.15",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.3",
-    "pm2": "^5.4.0"
+    "pm2": "^5.4.0",
+    "redis": "^4.6.15"
   }
 }
