--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "pm2 start",
-    "start": "nodemon app.js"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
@@ -19,7 +19,6 @@
     "mongoose": "5.11.15",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
-    "nodemon": "^3.1.3",
     "pm2": "^5.4.0",
     "redis": "^4.6.15"
   }
