--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
+    "pdfkit": "^0.15.1",
     "pm2": "^5.4.0",
-    "redis": "^4.6.15"
+    "redis": "^4.6.15",
+    "svg-to-pdfkit": "^0.1.8"
   }
 }
